--- a/RiskSuite/Server/appsettings.json
+++ b/RiskSuite/Server/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=postgres;Database=risk_suite;Username=crsuser;Password=basi1isk",
-    "OldDbConnection": "Data Source=sql;Database=CredBase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=postgres;Database=risk_suite;Username=crsuser;Password=basi1isk"
   },
   "Logging": {
     "LogLevel": {
